# easy_aes

./: Cargo.toml  README.md
src/: aes256_gcm_siv.rs  lib.rs  x_chacha20_poly1305.rs
src/aead/: aes256_gcm_siv.rs  mod.rs  x_chacha20_poly1305.rs
src/custom_aead/: mod.rs  salsa20_kangerootwelve.rs
src/hash/: mod.rs  sha3.rs
tests/: tests.rs
