cargo-features = ["strip"]

[package]
name = "easy_aes"
version = "2.0.1"
authors = ["scarjit"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
strip="symbols"
lto=true

[dependencies]
rand = "0.*"
base64 = "0.*"
hex = "0.*"
obfstr = "0.*"

[dependencies.aes-gcm-siv]
version = "0.*"
features = ["std"]

[dev-dependencies]
rand = "0.*"
