cargo-features = ["strip"]

[package]
name = "easy_aes"
version = "3.0.0"
authors = ["scarjit"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
strip="symbols"
lto=true

[dependencies]
rand = "0.*"
base64 = "0.*"
hex = "0.*"
obfstr = "0.*"
chacha20poly1305 = "0.7.*"
sha3 = "0.9.*"

[dependencies.aes-gcm-siv]
version = "0.*"
features = ["std"]

[dev-dependencies]
rayon = "1.5.0"
